# mypublicrepo

./: README.md
multiplot/example_files/: example01.cfg
multiplot/multiplot-exec/: CMakeLists.txt  localfilemodel.cpp  localfilemodel.hpp  main.cpp
multiplot/multiplot-exec/src/: oscplot.cpp  simleoscreader.cpp  simleoscreader.hpp
multiplot/multiplot-lib/: CMakeLists.txt  comtraderecord.hpp  comtraderecordtemplate.hpp  multiplot.hpp  multiplotdatamodel.hpp
multiplot/multiplot-lib/res/: translation.qrc
multiplot/multiplot-lib/res/translation/: multiplot-lib_ru.ts
multiplot/multiplot-lib/src/: comtradeconfig.cpp  comtradeconfig.hpp  comtraderecord.cpp  multiplot.cpp  multiplotcontroller.cpp  multiplotcontroller.hpp  multiplotcontrols.cpp  multiplotcontrols.hpp  multiplotmodel.cpp  multiplotmodel.hpp  multiplotpainter.cpp  multiplotpainter.hpp  multiplotwidget.cpp  multiplotwidget.hpp  oscvieweractionmanager.cpp  oscvieweractionmanager.hpp  phases.cpp  phases.hpp
multiplot/qwt/: CMakeLists.txt
multiplot/qwt/src/: qwt_sampling_thread.h
